fix(z-index): adjust z-index values for header and main sections to improve layering

--- a/src/app/header/header.scss
+++ b/src/app/header/header.scss
@@ -17,7 +17,7 @@ header {
     max-width: 1440px;
     width: 100%;
     height: $header-height;
-    z-index: 2;
+    z-index: 5;
     background-color: transparent;
     padding-top: 24px;
     padding-bottom: 24px;
